// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Light Mode Gallery <UploadImage/> renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {},
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID=""
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Light Mode Gallery <UploadImage/> renders correctly 2`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {},
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID=""
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Light Mode Selfie <UploadImage/> renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {},
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID=""
  >
    <Text />
  </View>
</View>
`;
